<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <EditText
            style="@style/customEdittext"
            android:hint="@string/name"
            android:inputType="textPersonName" />

        <EditText
            style="@style/customEdittext"
            android:hint="@string/id"
            android:inputType="number" />

        <EditText
            style="@style/customEdittext"
            android:hint="@string/date_of_birth"
            android:inputType="text" />

        <EditText
            style="@style/customEdittext"
            android:hint="@string/phone_number"
            android:inputType="number" />

        <EditText
            style="@style/customEdittext"
            android:hint="@string/blood_group"
            android:inputType="text" />

        <EditText
            style="@style/customEdittext"
            android:hint="@string/district"
            android:inputType="text" />

        <EditText
            style="@style/customEdittext"
            android:hint="@string/state"
            android:inputType="text" />

    </LinearLayout>

</ScrollView>